# stack-plugin-novation-launchpad

./: CMakeLists.txt  README.md
src/: StackLaunchpadTrigger.cpp  StackLaunchpadTrigger.h  resources.xml
ui/: StackLaunchpadGlobalSettings.ui  StackLaunchpadTrigger.ui
